[package]
name = "cdragon"
version = "0.1.1"
edition = "2021"
authors = ["Daniel Sage"]
repository = "https://github.com/dnsge/cdragon-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
